--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <div class="loader" id="loader" hidden>
         <img src="loader.svg" alt="Loading">
     </div>
+    <!-- Image Container -->
+    <div class="image-container" id="image-container">
+        <img src="https://images.unsplash.com/photo-1606669059257-19fc4ca49f79?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=968&q=80" alt="">
+        <img src="https://images.unsplash.com/photo-1606669059257-19fc4ca49f79?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=968&q=80" alt="">
+        <img src="https://images.unsplash.com/photo-1606669059257-19fc4ca49f79?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=968&q=80" alt="">
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
